--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "lru-cache": "^11.2.2",
     "mysql2": "^3.15.2"
   },
   "devDependencies": {
     "jest": "^29.6.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "supertest": "^7.1.4"
   }
 }
