--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "lru-cache": "^11.2.2",
-    "mysql2": "^3.15.2"
+    "mysql2": "^3.15.2",
+    "qrcode": "^1.5.4",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "jest": "^29.6.2",
