docs(deployment): 添加Docker和Kubernetes部署指南
- 在DEPLOYMENT_GUIDE.md中新增Docker Compose一键部署说明
- 补充Docker环境变量配置说明，列出关键配置项
- 新增Kubernetes部署步骤，包括持久化存储与服务部署
- 说明Kubernetes配置细节支持持久化和高可用
- 在README.md中增加Docker和Kubernetes部署简要说明
- 更新PROJECT_STRUCTURE.md，添加用户指南和API文档索引
- 完善用户指南文档，新增详细系统功能、操作流程及FAQ
- 修改数据库连接配置，调整字符集设置为utf8mb4
- 修改数据库初始化脚本，调整时间字段类型为DATETIME
- 优化交易引擎代码，添加异步下单和风险管理校验
- 增加交易引擎资源清理方法，防止定时器泄漏
- 在测试用例中支持异步测试，添加资源清理逻辑
- 修复部分测试用例，添加更多断言并更新测试期待值
- 统一调整代码风格，规范错误处理和日志输出

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node start.js",
+    "start-simple": "node start-simple.js",
     "dev": "nodemon server.js",
     "test": "jest",
     "init-db": "node scripts/init-database.js",
