chore(deployment): 优化部署配置并完善文档说明
- 在 .gitignore 中添加本地和生产环境变量文件以及配置文件忽略规则
- 在 DEPLOYMENT_GUIDE.md 中新增 Vercel 部署详细步骤和环境变量配置说明
- 精简并重构 README.md，完善快速开始、部署及项目结构内容
- 更新 UPDATE_LOG.md，完成多个开发阶段任务并整合文档
- 修改 config/teableConfig.js 支持环境变量覆盖 Teable 配置
- package.json 新增 Vercel 构建命令
- server.js 支持 Vercel 无服务器环境，条件启动服务器或导出应用实例

--- a/config/teableConfig.js.example
+++ b/config/teableConfig.js.example
@@ -1,10 +1,10 @@
 module.exports = {
-  // Teable数据库配置 - 支持环境变量覆盖
+  // Teable数据库配置 - 请复制此文件为 teableConfig.js 并填写实际配置
   teable: {
-    apiBase: process.env.TEABLE_API_BASE || 'https://teable.io',
-    baseId: process.env.TEABLE_BASE_ID || 'accBtf7wmWSWmxEmTbc_Lt4EeDps',
-    apiToken: process.env.TEABLE_API_TOKEN || '0PBkAIVQhnDIKM7kEo4rUE0JIDfzt5cftE',
-    // 表ID映射
+    apiBase: 'https://teable.io',  // Teable API 地址
+    baseId: 'your_base_id_here',   // 你的 Teable 数据库 Base ID
+    apiToken: 'your_api_token_here', // 你的 Teable API Token
+    // 表ID映射 - 请根据实际表ID进行修改
     tables: {
       users: 'tbl_users',
       transactions: 'tbl_transactions',
