--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ node_modules/
 
 # Environment variables
 .env
+.env.local
+.env.production
 
 # Logs
 logs
@@ -28,3 +30,6 @@ data/backups/*
 # OS generated files
 .DS_Store
 Thumbs.db
+
+# Configuration files
+config/teableConfig.js
