--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "server.js",
   "scripts": {
     "start": "node start.js",
+    "start-mobile": "node mobile-server.js",
     "start-simple": "node start-simple.js",
     "dev": "nodemon server.js",
+    "dev-mobile": "nodemon mobile-server.js",
     "test": "jest",
     "init-teable-workflows": "node scripts/init-teable-workflows.js",
     "init-data": "node scripts/init-data.js",
     "status": "node scripts/system-status.js",
     "deploy": "node scripts/deploy-auto.js",
+    "deploy-mobile": "vercel --prod --local-config=vercel-mobile.json",
     "deploy-verify": "node scripts/deploy-and-verify.js",
     "health": "node scripts/health-check.js",
     "backup": "node scripts/auto-backup.js",
@@ -31,6 +34,7 @@
     "bcrypt": "^6.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
