--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,18 @@ Thumbs.db
 config/teableConfig.js
 .vercel
 .env*.local
+
+# Additional files to ignore
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
+node_modules/
+coverage/
+*.pid
+*.pid.lock
+*.log
+dist/
+tmp/
+temp/
+```
