完成响应式设计融合：1. 修复移动端路由注册问题 2. 修复API调用路径 3. 优化登录页面设计 4. 添加响应式测试脚本

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start-mobile": "node mobile-server.js",
     "start-simple": "node start-simple.js",
     "test": "jest",
+    "test-responsive": "node test-responsive-design.js",
     "init-teable-workflows": "node scripts/init-teable-workflows.js",
     "init-data": "node scripts/init-data.js",
     "status": "node scripts/system-status.js",
