修复Vercel部署中的API接口问题：1. 更新环境配置文件以正确处理Vercel域名 2. 优化Vercel路由配置 3. 添加部署问题解决方案文档

--- a/vercel.json
+++ b/vercel.json
@@ -25,6 +25,18 @@
       "dest": "/api/test.js"
     },
     {
+      "src": "/api/users/(.*)",
+      "dest": "/server.js"
+    },
+    {
+      "src": "/api/trade/(.*)",
+      "dest": "/server.js"
+    },
+    {
+      "src": "/api/admin/(.*)",
+      "dest": "/server.js"
+    },
+    {
       "src": "/(.*)",
       "dest": "server.js"
     }
