--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
     "init-data": "node scripts/init-data.js",
     "status": "node scripts/system-status.js",
     "deploy": "node scripts/deploy-auto.js",
-    "deploy-mobile": "vercel --prod --local-config=vercel-mobile.json",
     "deploy-verify": "node scripts/deploy-and-verify.js",
     "health": "node scripts/health-check.js",
     "backup": "node scripts/auto-backup.js",
     "monitor": "node scripts/monitor.js",
-    "vercel-build": "echo 'Building for Vercel'",
     "pm2-start": "pm2 start ecosystem.config.js",
     "pm2-stop": "pm2 stop ecosystem.config.js",
     "pm2-restart": "pm2 restart ecosystem.config.js",
     "pm2-logs": "pm2 logs",
     "pm2-list": "pm2 list",
-    "pm2-monit": "pm2 monit"
+    "pm2-monit": "pm2 monit",
+    "dev:web": "vite --config web/vite.config.js",
+    "build:web": "vite build --config web/vite.config.js",
+    "preview:web": "vite preview --config web/vite.config.js"
   },
   "keywords": [
     "trading",
@@ -48,11 +49,23 @@
     "mysql2": "^3.15.2",
     "node-cron": "^4.2.1",
     "qrcode": "^1.5.4",
-    "speakeasy": "^2.0.0"
+    "speakeasy": "^2.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2",
+    "swr": "^2.2.0"
   },
   "devDependencies": {
     "jest": "^29.6.2",
     "nodemon": "^3.0.1",
-    "supertest": "^7.1.4"
+    "supertest": "^7.1.4",
+    "vite": "^5.0.0",
+    "typescript": "^5.2.2",
+    "tailwindcss": "^3.3.3",
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.16",
+    "@vitejs/plugin-react": "^3.1.0"
   }
 }
