--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,9 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.15",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.15",
