--- a/web/package.json
+++ b/web/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "axios": "^1.6.0",
+    "chart.js": "^4.5.1",
     "echarts": "^5.4.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1",
     "swr": "^2.3.6"
