--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
@@ -49,23 +51,21 @@
     "mysql2": "^3.15.2",
     "node-cron": "^4.2.1",
     "qrcode": "^1.5.4",
-    "speakeasy": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
-    "echarts": "^5.4.3",
-    "echarts-for-react": "^3.0.2",
+    "speakeasy": "^2.0.0",
     "swr": "^2.2.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.16",
     "jest": "^29.6.2",
     "nodemon": "^3.0.1",
-    "supertest": "^7.1.4",
-    "vite": "^5.0.0",
-    "typescript": "^5.2.2",
-    "tailwindcss": "^3.3.3",
     "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16",
-    "@vitejs/plugin-react": "^3.1.0"
+    "supertest": "^7.1.4",
+    "tailwindcss": "^4.1.15",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.0"
   }
 }
