优化部署配置：更新Nginx反向代理配置，完善PM2多服务管理，添加自动化部署脚本

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,24 @@
-# Teable 数据库配置
-TEABLE_API_BASE=https://teable.io
-TEABLE_BASE_ID=your_base_id
-TEABLE_API_TOKEN=your_api_token
+# 环境变量示例文件
+# 复制此文件为 .env 并填写实际值
+
+# 服务器配置
+PORT=3001
+NODE_ENV=development
+
+# 数据库配置
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=virtual_trading
+DB_USER=root
+DB_PASSWORD=password
+
+# Teable配置
+TEABLE_API_KEY=your_teable_api_key
+TEABLE_BASE_ID=your_teable_base_id
+
+# JWT配置
+JWT_SECRET=your_jwt_secret_key
+JWT_EXPIRES_IN=24h
 
 # 其他配置
-PORT=3001
+API_BASE_URL=http://localhost:3001
