--- a/nginx.conf
+++ b/nginx.conf
@@ -3,8 +3,17 @@ events {
 }
 
 http {
-    upstream app {
-        server app:3001;
+    # 定义上游服务器
+    upstream fund_server {
+        server localhost:3001;
+    }
+    
+    upstream contract_market {
+        server localhost:3002;
+    }
+    
+    upstream option_market {
+        server localhost:3003;
     }
 
     # HTTP服务器
@@ -12,27 +21,9 @@ http {
         listen 80;
         server_name localhost;
 
-        # 重定向到HTTPS
-        return 301 https://$server_name$request_uri;
-    }
-
-    # HTTPS服务器
-    server {
-        listen 443 ssl;
-        server_name localhost;
-
-        # SSL配置（需要替换为实际证书）
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/key.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-
-        # 客户端最大请求体大小
-        client_max_body_size 10M;
-
-        # 代理到应用服务器
-        location / {
-            proxy_pass http://app;
+        # 基金服务代理
+        location /funds/ {
+            proxy_pass http://fund_server/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -43,11 +34,37 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        # 静态资源缓存
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-            proxy_pass http://app;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
+        # 合约市场服务代理
+        location /contracts/ {
+            proxy_pass http://contract_market/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # 期权市场服务代理
+        location /options/ {
+            proxy_pass http://option_market/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # 静态资源
+        location / {
+            root /usr/share/nginx/html;
+            index index.html index.htm;
+            try_files $uri $uri/ =404;
         }
     }
 }
