docs(readme): 更新项目文档内容和服务说明
- 新增移动端优化界面、实时市场数据更新、系统监控和性能分析说明
- 修改开发服务器运行端口为 http://localhost:3001
- 调整 PM2 服务启动顺序及新增性能警报检查定时任务描述
- 添加系统总控面板使用示例和说明，提高操作便利性
- 更新 Docker 代理配置，调整前端和 API 服务代理路径
- 修正部署指南文件名为 DEPLOYMENT-GUIDE.md

--- a/nginx/jcstjj.top.conf
+++ b/nginx/jcstjj.top.conf
@@ -13,8 +13,8 @@ server {
   server_name jcstjj.top www.jcstjj.top;
 
   # SSL证书配置（acme.sh申请的证书路径）
-  ssl_certificate /etc/nginx/ssl/jcstjj.top.pem;
-  ssl_certificate_key /etc/nginx/ssl/jcstjj.top.key;
+  ssl_certificate C:/ssl-manager/certs/jcstjj.top.pem;
+  ssl_certificate_key C:/ssl-manager/certs/jcstjj.top.key;
   
   # SSL安全配置
   ssl_protocols TLSv1.2 TLSv1.3;
