--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "health": "node scripts/health-check.js",
     "backup": "node scripts/auto-backup.js",
     "monitor": "node scripts/monitor.js",
-    "pm2-start": "pm2 start ecosystem.config.js",
-    "pm2-stop": "pm2 stop ecosystem.config.js",
-    "pm2-restart": "pm2 restart ecosystem.config.js",
-    "pm2-logs": "pm2 logs",
-    "pm2-list": "pm2 list",
+    "pm2-start": "npx pm2 start config/pm2/ecosystem.config.js",
+    "pm2-stop": "npx pm2 stop config/pm2/ecosystem.config.js",
+    "pm2-restart": "npx pm2 restart config/pm2/ecosystem.config.js",
+    "pm2-logs": "npx pm2 logs",
+    "pm2-list": "npx pm2 list",
     "pm2-monit": "pm2 monit",
     "generate-api": "node scripts/generate-api-docs.js",
     "generate-api-docs": "node scripts/api-docs-generator.js",
