--- a/config/nginx/nginx/jcstjj.top.conf
+++ b/config/nginx/nginx/jcstjj.top.conf
@@ -108,7 +108,7 @@ server {
 
     # 合约交易服务代理
     location /contract/ {
-        proxy_pass http://localhost:3002;
+        proxy_pass http://localhost:3002/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -121,7 +121,33 @@ server {
 
     # 期权交易服务代理
     location /option/ {
-        proxy_pass http://localhost:3003;
+        proxy_pass http://localhost:3003/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # 合约交易API代理
+    location /api/contract-market/ {
+        proxy_pass http://localhost:3002/api/contract-market/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # 期权交易API代理
+    location /api/option-market/ {
+        proxy_pass http://localhost:3003/api/option-market/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
