--- a/config/nginx/nginx/jcstjj.top.conf
+++ b/config/nginx/nginx/jcstjj.top.conf
@@ -31,8 +31,8 @@ server {
     server_name jcstjj.top www.jcstjj.top;
 
     # SSL证书配置（支持环境变量）
-    ssl_certificate ${SSL_CERT_PATH:-/etc/letsencrypt/live/jcstjj.top/fullchain.pem};
-    ssl_certificate_key ${SSL_KEY_PATH:-/etc/letsencrypt/live/jcstjj.top/privkey.pem};
+    ssl_certificate C:/ssl-manager/certs/jcstjj.top.pem;
+    ssl_certificate_key C:/ssl-manager/certs/jcstjj.top.key;
 
     # SSL安全配置
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -74,7 +74,7 @@ server {
 
     # 前端应用代理
     location / {
-        proxy_pass http://localhost:5173;
+        proxy_pass http://localhost:5174;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -87,6 +87,13 @@ server {
         # 缓存静态资源
         expires 1d;
         add_header Cache-Control "public, max-age=86400" always;
+    }
+
+    # 静态文件服务
+    location /static/ {
+        root C:/Users/Administrator/jucaizhongfa;
+        expires 1d;
+        add_header Cache-Control "public, max-age=86400";
     }
 
     # API服务代理
