--- a/nginx.conf
+++ b/nginx.conf
@@ -40,7 +40,7 @@ http {
         #access_log  logs/host.access.log  main;
 
         location / {
-            root   html;
+            root   C:/Users/Administrator/jucaizhongfa/public;
             index  index.html index.htm;
         }
 
