--- a/nginx.conf
+++ b/nginx.conf
@@ -40,7 +40,7 @@ http {
         #access_log  logs/host.access.log  main;
 
         location / {
-            root   C:/Users/Administrator/jucaizhongfa/public;
+            root   C:/Users/Administrator/virtual-trading-platform/public;
             index  index.html index.htm;
         }
 
@@ -114,5 +114,5 @@ http {
     #}
 
     # 包含 jcstjj.top 配置
-    include jcstjj.top.conf;
+    include config/nginx/nginx/jcstjj.top.conf;
 }
