--- a/web/.env.example
+++ b/web/.env.example
@@ -6,3 +6,9 @@ VITE_API_BASE=https://api.jcstjj.top
 
 # 自定义域名
 VITE_CUSTOM_DOMAIN=jiuzhougroup.vip
+
+# 健康检查端点
+VITE_HEALTH_CHECK_URL=/health
+
+# Vercel特定配置
+VERCEL_ENV=production
