--- a/web/vercel.json
+++ b/web/vercel.json
@@ -18,6 +18,16 @@
       "dest": "/assets/$1"
     },
     {
+      "src": "/(.*)\\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|json|xml|pdf|zip|tar|gz|rar|7z)",
+      "headers": {
+        "cache-control": "public,max-age=31536000,immutable"
+      }
+    },
+    {
+      "src": "/health",
+      "dest": "/test.html"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
