feat(admin): 实现完整管理后台接口和权限路由
- 实现用户管理相关接口：用户列表查询、新建、更新、删除
- 实现交易管理接口：交易列表查询、交易状态更新
- 实现资金管理接口：资金列表查询、资金调整操作
- 实现系统统计接口，提供关键系统指标数据
- 迁移路由设置，统一使用新的管理路由实现上述接口
- 修改CORS配置，增加Cloudflare Pages域名支持
- 优化后端日志功能，加入winston日志轮转支持
- 前端部署文档更新，改为Vite构建，添加环境变量配置说明
- 调整定时任务频率为每5分钟执行合约与期权行情更新
- 优化虚拟交易引擎市场数据更新频率至30秒
- 调整性能监控相关阈值，延长响应时间与查询时间警告门槛
- 合约引擎价格历史缓存改为仅保存最近100条记录
- 前端依赖新增Ant Design相关组件库及图标支持

--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,9 @@
     "prebuild": "node scripts/copy-public-files.js"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@heroicons/react": "^2.2.0",
+    "antd": "^5.27.6",
     "axios": "^1.6.0",
     "chart.js": "^4.5.1",
     "echarts": "^5.4.3",
