--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "bcrypt": "^6.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.18",
     "dotenv": "^17.2.3",
     "echarts": "^5.4.3",
     "echarts-for-react": "^3.0.2",
