--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "speakeasy": "^2.0.0",
     "swr": "^2.2.0",
     "winston": "^3.18.3"
