--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1",
+    "socket.io-client": "^4.8.1",
     "swr": "^2.3.6",
     "zustand": "^5.0.8"
   },
