--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.0",
     "chart.js": "^4.5.1",
     "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
