refactor(web): clean up legacy JSX files and migrate to TypeScript components
- Remove legacy JSX components and pages
- Add new TypeScript components (MarketView, UserProfile)
- Update router configuration
- Fix formatDateTime utility function
- Add Dockerfile for production deployment
- Update build configuration

--- a/web/vercel.json
+++ b/web/vercel.json
@@ -5,10 +5,16 @@
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "dist",
+        "buildCommand": "npm run build"
       }
     }
   ],
+  "env": {
+    "VITE_API_BASE_URL": "https://api.your-domain.com",
+    "VITE_WS_URL": "wss://api.your-domain.com",
+    "NODE_ENV": "production"
+  },
   "routes": [
     {
       "src": "/assets/(.*)",
