--- a/web/package.json
+++ b/web/package.json
@@ -7,10 +7,14 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "jest",
-    "prebuild": "node scripts/copy-public-files.js"
+    "prebuild": "node scripts/copy-public-files.js",
+    "vercel-build": "bash scripts/build.sh",
+    "start": "vite preview --port $PORT"
   },
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@heroicons/react": "^2.2.0",
     "antd": "^5.27.6",
     "axios": "^1.6.0",
@@ -22,17 +26,28 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.1",
+    "recharts": "^3.3.0",
     "socket.io-client": "^4.8.1",
     "swr": "^2.3.6",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.27.1",
+    "@babel/plugin-transform-runtime": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.21",
+    "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.16",
+    "terser": "^5.44.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
   }
